--- a/index.html
+++ b/index.html
@@ -127,13 +127,14 @@
                     <li><a href="contact.html">DONATE</a></li>
                   </ul>
 
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">NEWS / BLOG<span
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">NEWS<span
                       class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="news.html">NEWS & EVENTS</a></li>
                     <!-- 					<li><a href="blog/index.html" target="blank">BLOGS</a></li> -->
 
                   </ul>
+                <li><a href="blog.html">BLOGS</a></li>
                 <li><a href="gallery.html">GALLERY</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
               </ul>
